[feat] update swagger api.yaml
